# Remote-managment-Client

./: .gitignore  CMakeLists.txt  README.md  main.cpp
client/: client.cpp  client.h
client/ssl/: crypto.cpp  crypto.h
clientKeys/: client.crt  client.key
